--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Site#index</h1>
-<p>Find me in app/views/site/index.html.erb</p>
+<% @restaurants.each do |r| %>
+
+	<%= r.name %><br />
+
+	<% r.cuisines.each do |c| %>
+
+		<%= c.name %>
+
+	<% end %><br /><br />
+
+<% end %>
