turning off json

--- a/app/views/restaurant/index.html.erb
+++ b/app/views/restaurant/index.html.erb
@@ -1,6 +1,7 @@
-<% @restaurants.each do |r| %>
+<%# @restaurants.each do |r| %>
 
-	<%= r.name %><br />
+	<%# r.name %><br />
 
-<% end %>
+<%# end %>
 
+<%= Geocoder.search ("Madrid")%>
