--- a/app/views/restaurant/_show.json.erb
+++ b/app/views/restaurant/_show.json.erb
@@ -1,9 +1,9 @@
 {	
-	<%	mitsize = restaurant.menu_item_types.size
+	<%	mitsize = restaurant.menu_item_types.length
 		restaurant.menu_item_types.each_with_index do |mit, i| %>
 		"<%= mit.name %>" : 
 				[
-			<%	misize = mit.menu_items.size
+			<%	misize = mit.menu_items.length
 				mit.menu_items.each_with_index do |mi, j| %>
 
 					{
