--- a/app/views/restaurant/_show.json.erb
+++ b/app/views/restaurant/_show.json.erb
@@ -1,8 +1,7 @@
-	[
-
+	{	
 	<%	mitsize = restaurant.menu_item_types.length
 		restaurant.menu_item_types.each_with_index do |mit, i| %>
-	{	"<%= mit.name %>" : 
+		"<%= mit.name %>" : 
 				[
 			<%	misize = mit.menu_items.length
 				mit.menu_items.each_with_index do |mi, j| %>
@@ -12,10 +11,8 @@
 					"price" 		: "<%= mi.price %>",
 					"description" 		: "<%= mi.description %>"
 					}<%= j <= misize-2 ? ", " : "" %>
-			<% end %>	]
-	}<%= i <= mitsize-2 ? ", " : "" %>
+			<% end %>	]<%= i <= mitsize-2 ? ", " : "" %>
 	<% end %>
-
-	]
+	}
 	
 	
