updating login forms

--- a/app/views/partials/_signin.html.erb
+++ b/app/views/partials/_signin.html.erb
@@ -20,7 +20,7 @@
 		  		<input type="submit" value="Sign in" />
 			</div>
 
-			<p>Or <%= link_to "click here", signup_path %> to sign up</p>
+			<p>Or <%= link_to "click here", new_user_path %> to sign up</p>
 
 		<%end%>
 
