--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,5 +1,16 @@
-<h1>Site#home</h1>
-<p>Find me in app/views/site/home.html.erb</p>
+<div class="header">
+	<div class="header-left">
+		<h1>Site#home</h1>
+		<p class="home">Find me in app/views/site/home.html.erb</p>
+	</div>
 
-<%= render '/partials/signin' %>
+
+	<div class="header-right">
+		<%= render '/partials/signin' %>
+	</div>
+	<div class="clear"></div>
+</div>
+
+<section id="main_content" class="landing">
+</section>
 
