--- a/app/assets/stylesheets/site.css.scss
+++ b/app/assets/stylesheets/site.css.scss
@@ -2,77 +2,72 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#main_content.landing{
+* {
+	margin:0;
+	padding:0;
+}
 
-	.login_container{
-		margin:150px auto 0 auto;
-		width:400px;
+body{
+	font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+	position:relative;
+	color: #a9a9a9;
+	font-size:14px;
+	margin: 0 40px 40px 40px;
+}
 
-		h2{
-			margin-bottom: 5px;
-		}
+a{
+	text-decoration:none;
+	color: #e60000 !important;
+	font-weight:bold;
+}
 
-		form{
-			.field{
-				input{
-					&#username{
-						width: calc(100% - 22px);
-					    border: 1px solid #c9d0d6;
-					    border-radius: 3px;
-					    font-size: 0.95em;
-					    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-					    outline: none;
-					    padding: 8px 10px 7px;
-					    margin-bottom:10px;
-					}
+u{
+	text-decoration:none;
+}
 
-					&#password{
-						width: calc(100% - 22px);
-					    border: 1px solid #c9d0d6;
-					    border-radius: 3px;
-					    font-size: 0.95em;
-					    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-					    outline: none;
-					    padding: 8px 10px 7px;
-					    margin-bottom:10px;
-					}
+a:link, a:hover, a:visited, a:active{
+	text-decoration:none;
+}
 
-					&#email{
-						width: calc(100% - 22px);
-					    border: 1px solid #c9d0d6;
-					    border-radius: 3px;
-					    font-size: 0.95em;
-					    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-					    outline: none;
-					    padding: 8px 10px 7px;
-					    margin-bottom:10px;
-					}
+h1, h2, h3, h4, h5, h6, p, li{
+	margin:0;
+	padding:0;
+	font-weight:normal;
+}
 
-					&#confirmpassword{
-						width: calc(100% - 22px);
-					    border: 1px solid #c9d0d6;
-					    border-radius: 3px;
-					    font-size: 0.95em;
-					    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-					    outline: none;
-					    padding: 8px 10px 7px;
-					    margin-bottom:10px;
-					}
-				}
-			}
+ul{
+	list-style-type: none;
+}
 
-			.actions{
-				margin-top: 0px;
+li{}
 
-				input{
-					border: 1px solid #c9d0d6;
-					font-size: 0.95em;
-					font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-					outline: none;
-					padding: 8px 25px;
-					margin-bottom:10px;
-				}
-			}
-		}
-	}
+img, link, input, button{
+	border:0; 
+	outline:0
+}
+
+.left{
+	float:left;
+}
+
+.right{
+	float:right;
+}
+
+.clear{
+	clear:both;
+}
+
+.show{
+	display:block;
+}
+
+.hide{
+	display:none
+}
+
+textarea { 
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
 }
