--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,3 @@
-<!-- <h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p> -->
+<!-- <p>Remote form</p> -->
 
-<%= render '/partials/signup' %>
+<%= render "partials/signup" %>
