--- a/app/views/partials/_signin.html.erb
+++ b/app/views/partials/_signin.html.erb
@@ -18,6 +18,10 @@
 		  		<input id="password" type="password" name="password" placeholder="enter password" autocomplete="off" />
 			</div>
 
+			<div class="antispam">
+				Leave this empty: <input type="text" name="url" />
+			</div>
+
 			<div class="actions">
 		  		<input type="submit" value="Sign in" />
 			</div>
