--- a/app/views/partials/_signup.html.erb
+++ b/app/views/partials/_signup.html.erb
@@ -31,6 +31,10 @@
 				<%= f.password_field :password, id: "password", placeholder: "enter password", autocomplete: "off" %>
 			</div>
 
+			<div class="antispam">
+				Leave this empty: <%= f.text_field :url, autocomplete: "off" %>
+			</div>
+
 			<div class="actions">
 				<%= f.submit "Create my account" %>
 			</div>
