fixing timezone, reverting to devise

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -48,76 +48,78 @@
 				a{
 					color: #e60000;
 				}
-
-				form{
-					.field{
-						input{
-							&#username{
-								width: calc(100% - 22px);
-							    border: 1px solid #c9d0d6;
-							    border-radius: 3px;
-							    font-size: 0.95em;
-							    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-							    outline: none;
-							    padding: 8px 10px 7px;
-							    margin-bottom:10px;
-							}
-
-							&#password{
-								width: calc(100% - 22px);
-							    border: 1px solid #c9d0d6;
-							    border-radius: 3px;
-							    font-size: 0.95em;
-							    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-							    outline: none;
-							    padding: 8px 10px 7px;
-							    margin-bottom:10px;
-							}
-
-							&#email{
-								width: calc(100% - 22px);
-							    border: 1px solid #c9d0d6;
-							    border-radius: 3px;
-							    font-size: 0.95em;
-							    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-							    outline: none;
-							    padding: 8px 10px 7px;
-							    margin-bottom:10px;
-							}
-
-							&#confirmpassword{
-								width: calc(100% - 22px);
-							    border: 1px solid #c9d0d6;
-							    border-radius: 3px;
-							    font-size: 0.95em;
-							    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-							    outline: none;
-							    padding: 8px 10px 7px;
-							    margin-bottom:10px;
-							}
-						}
-
-						&.antispam{
-							display:none;
-						}
-					}
-
-					.actions{
-						margin-top: 0px;
-
-						input{
-							border: 1px solid #c9d0d6;
-							font-size: 0.95em;
-							font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-							outline: none;
-							padding: 8px 25px;
-							margin-bottom:10px;
-						}
-					}
-				}
 			}
 		}
 	}
 
 	#main_content.landing{}
+}
+
+form{
+	width:400px;
+
+	.field{
+		input{
+			&#username{
+				width: calc(100% - 22px);
+			    border: 1px solid #c9d0d6;
+			    border-radius: 3px;
+			    font-size: 0.95em;
+			    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+			    outline: none;
+			    padding: 8px 10px 7px;
+			    margin-bottom:10px;
+			}
+
+			&#password{
+				width: calc(100% - 22px);
+			    border: 1px solid #c9d0d6;
+			    border-radius: 3px;
+			    font-size: 0.95em;
+			    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+			    outline: none;
+			    padding: 8px 10px 7px;
+			    margin-bottom:10px;
+			}
+
+			&#email{
+				width: calc(100% - 22px);
+			    border: 1px solid #c9d0d6;
+			    border-radius: 3px;
+			    font-size: 0.95em;
+			    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+			    outline: none;
+			    padding: 8px 10px 7px;
+			    margin-bottom:10px;
+			}
+
+			&#confirmpassword{
+				width: calc(100% - 22px);
+			    border: 1px solid #c9d0d6;
+			    border-radius: 3px;
+			    font-size: 0.95em;
+			    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+			    outline: none;
+			    padding: 8px 10px 7px;
+			    margin-bottom:10px;
+			}
+		}
+
+		&.antispam{
+			display:none;
+		}
+	}
+
+	.actions{
+		margin-top: 0px;
+
+		input{
+			border: 1px solid #c9d0d6;
+			font-size: 0.95em;
+			font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+			outline: none;
+			padding: 8px 25px;
+			margin-bottom:10px;
+		}
+	}
 }
