--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<div class="signin_container">
+
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -6,6 +8,11 @@
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autocomplete: "off" %>
   </div>
 
   <div class="field">
@@ -26,4 +33,8 @@
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<p>Or <%= link_to "click here", root_path %> to return</p>
+
+<%# render "devise/shared/links" %>
+
+</div>
