--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -6,7 +6,13 @@
 
 
 	<div class="header-right">
-		<%= render '/partials/signin' %>
+		<% if user_signed_in? %>
+  			Logged in as <strong><%= current_user.email %></strong>.
+  			<%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+  			<%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+		<% else %>
+			<%= render '/partials/signin' %>
+		<% end %>
 	</div>
 	<div class="clear"></div>
 </div>
