fixing sign in functionality

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -36,6 +36,7 @@
 					display: inline-block;
     				float: right;
     				margin-top: 5px;
+    				margin-right:80px;
 
 					&.alert-success{
 						color: green;
