--- a/app/assets/stylesheets/signup.css.scss
+++ b/app/assets/stylesheets/signup.css.scss
@@ -9,6 +9,13 @@
 			}
 
 			form{
+				#error_explanation{
+
+					h2{
+						font-size:1.5em;
+					}
+				}
+
 				.field{
 					input{
 						&#username{
