--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body <%= @bodyclass ? "class = #{@bodyclass}" : "" %>>
-<div class="container">
+<!-- <div class="container">
   <% flash.each do |key, value| %>
     <div class="alert alert-<%= key %>">
       <%= value %>
     </div>
   <% end %>
-</div>
+</div> -->
 
 <%= yield %>
 
